removed redundant spacing. added correct ones for auth form layout

--- a/src/app/feature/layouts/auth-layout/auth-layout.component.scss
+++ b/src/app/feature/layouts/auth-layout/auth-layout.component.scss
@@ -60,6 +60,7 @@
   ::ng-deep .auth-pages__wrapper {
     min-height: calc(100vh - 80px);
     display: flex;
+    padding: 0 10px;
     align-items: flex-start;
     justify-content: space-around;
     div.auth-pages__inner-container {
