--- a/src/app/feature/pages/ddx-signup-page/ddx-signup-wrapper/ddx-signup-wrapper.component.scss
+++ b/src/app/feature/pages/ddx-signup-page/ddx-signup-wrapper/ddx-signup-wrapper.component.scss
@@ -13,7 +13,6 @@ $input-width: 535px;
     width: 100%;
     max-width: $input-width;
     box-sizing: border-box;
-    padding: 0 10px;
 
     display: flex;
     flex-direction: column;
