--- a/src/app/feature/public/ddx-auth-pages.scss
+++ b/src/app/feature/public/ddx-auth-pages.scss
@@ -10,7 +10,7 @@
   form {
     color: $ddx-light;
     box-sizing: border-box;
-    padding: 10px;
+    // padding: 10px;
 
     .title {
       display: flex;
